--- a/src/app/home-component/home-component.scss
+++ b/src/app/home-component/home-component.scss
@@ -2,6 +2,8 @@
     th {
         font-size: 16px;
         font-weight: 600;
+        background-color: rosybrown;
+        // background-color: white;
     }
 }
 
@@ -12,4 +14,11 @@
 
 td {
     text-align: center;
+}
+
+tr:nth-child(even) {
+    background-color: rgb(255, 244, 244);
+}
+tr:nth-child(odd) {
+    background-color: rgb(233, 223, 223);
 }
