ReadME file changes

--- a/src/app/home-component/home-component.html
+++ b/src/app/home-component/home-component.html
@@ -1,6 +1,6 @@
 <div fxFlexFill fxLayout="column" class="scroll-container">
     <div fxLayoutAlign ="start center" class="header primary-color-theme">
-        <img alt="Avengers pportal logo" src="assets/images/logo.jpg" (click) = homeComponentService.goToHome()/>
+        <img alt="Avengers portal logo" src="assets/images/logo.jpg" (click) = homeComponentService.goToHome()/>
         <div fxHide.lt-sm> Avengers Health Portal </div>
         <div fxHide.gt-xs> Health Portal </div>
     </div>   
